[gd_scene load_steps=16 format=3 uid="uid://c421k7ke8tl76"]

[ext_resource type="Texture2D" uid="uid://bcenfw7pbi3ks" path="res://assets/ui/buttons/SpaceInvaders_Icons.png" id="1_1myoo"]
[ext_resource type="Script" uid="uid://do7dmlmawy746" path="res://ui/game_menu_container.gd" id="1_gremv"]
[ext_resource type="Theme" uid="uid://cuya3oesxofh2" path="res://resource/game_theme.tres" id="1_xek0y"]
[ext_resource type="PackedScene" uid="uid://dgjvwpw5aln1q" path="res://ui/buttons/play_button.tscn" id="2_gremv"]
[ext_resource type="PackedScene" uid="uid://u17vyaob2nnc" path="res://ui/buttons/audio_bus_button.tscn" id="4_wte08"]
[ext_resource type="PackedScene" uid="uid://bnhatq1g8uroh" path="res://ui/buttons/screen_button.tscn" id="5_3d0ao"]
[ext_resource type="StyleBox" uid="uid://42ypp5rrhahr" path="res://resource/music_on_button.tres" id="6_xn1ve"]
[ext_resource type="StyleBox" uid="uid://bsyvpxotsgpof" path="res://resource/music_off_button.tres" id="7_3d0ao"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_xek0y"]
load_path = "res://.godot/imported/SpaceInvaders_Icons.png-da2aedf138362630804c6533a9c0f23f.ctex"

[sub_resource type="AtlasTexture" id="AtlasTexture_d701s"]
atlas = SubResource("CompressedTexture2D_xek0y")
region = Rect2(64, 128, 32, 32)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_dqqhb"]
load_path = "res://.godot/imported/SpaceInvaders_Icons.png-da2aedf138362630804c6533a9c0f23f.ctex"

[sub_resource type="AtlasTexture" id="AtlasTexture_b2suy"]
atlas = SubResource("CompressedTexture2D_dqqhb")
region = Rect2(64, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_h8lre"]
atlas = ExtResource("1_1myoo")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_arv16"]
atlas = ExtResource("1_1myoo")
region = Rect2(160, 160, 32, 32)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_3tkts"]
texture = SubResource("AtlasTexture_arv16")

[node name="GameMenuContainer" type="MarginContainer"]
z_index = 10
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -360.0
offset_top = -293.5
offset_bottom = 293.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_xek0y")
theme_type_variation = &"Wrapper"
script = ExtResource("1_gremv")

[node name="PanelContainer" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(0, 512)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_type_variation = &"Wrapper"
theme_override_constants/margin_top = 24
theme_override_constants/margin_bottom = 24

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 48

[node name="TitleLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_type_variation = &"HeaderLabel"
text = "BREAKOUT
INVADERS!"
horizontal_alignment = 1

[node name="MarginContainer2" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"Wrapper"

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer2"]
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
text = "Defeat waves of aliens with richoceting rockets!

Unlimited shots, but make sure to keep them all in the air!"
horizontal_alignment = 1
autowrap_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="MoveLeftHBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 24
alignment = 1

[node name="TextureRect" type="TextureRect" parent="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/MoveLeftHBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
texture = SubResource("AtlasTexture_d701s")

[node name="Label2" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/MoveLeftHBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Move Left"

[node name="MoveRightHBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 24
alignment = 1

[node name="TextureRect" type="TextureRect" parent="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/MoveRightHBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
texture = SubResource("AtlasTexture_b2suy")

[node name="Label2" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/MoveRightHBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Move Right"

[node name="SpaceHBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 24
alignment = 1

[node name="TextureRect" type="TextureRect" parent="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/SpaceHBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
texture = SubResource("AtlasTexture_h8lre")

[node name="Label2" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/SpaceHBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Launch Rocket"

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 28

[node name="AudioBusButton2" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer" instance=ExtResource("4_wte08")]
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 4
audio_bus_name = "SFX"

[node name="TopScoresButton" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer" instance=ExtResource("5_3d0ao")]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxTexture_3tkts")

[node name="PlayButton" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer" instance=ExtResource("2_gremv")]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8

[node name="AudioBusButton" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer" instance=ExtResource("4_wte08")]
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 4
audio_bus_name = "Music"
style_box_on = ExtResource("6_xn1ve")
style_box_off = ExtResource("7_3d0ao")

[node name="VBoxContainer2" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="TopLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "Top Player"
horizontal_alignment = 1

[node name="TopPlayerScore" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
text = "Daddio Dragonslayer  - 1231"
horizontal_alignment = 1

[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/TopScoresButton" to="." method="_on_top_scores_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
